--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,17 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_profile">ProfileActivity</string>
+
+    <string-array name="fields">
+        <item>Name</item>
+        <item>Description</item>
+        <item>Email</item>
+        <item>Address</item>
+        <item>Phone</item>
+        <item>Facebook</item>
+        <item>Twitter</item>
+        <item>Snapchat</item>
+        <item>Instagram</item>
+        <item>YouTube</item>
+    </string-array>
 </resources>
